Table inventario {
  inventario_id integer [pk, increment]
  inventario_name varchar
  inventario_ean varchar
  //inventario_created timestamp
  inventario_quantity integer
  inventario_localization varchar
}

Table pedido {
  pedido_id int [pk]
  pedido_finalizado boolean
  pedido_user int [ref: > user.id]
}

Table componentes {
  componentes_id integer [ref: > pedido.id]
  componentes_producto integer [ref: > inventario.id]
  componentes_quantity int
}

Table user {
  user_id int [pk, increment]
  username_name varchar
}

